# COGITATOR

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md  audit.toml  build.rs  cogitator_paper.tex  draft-noctem-cogitator-witness-protocol-00.xml  flake.nix  policy.toml  report.rs  repro.sh  shell.nix
.github/workflows/: ci.yml  gauntlet-witness.yml  release.yml
docs/: Index.html
fixtures/: policy_allow_all.toml  policy_clawdbot_block.toml
goldens/: gauntlet_witness_root.txt  ordeal_witness_root.txt
paper/: paper.tex
schemas/: agent_trace.schema.json  chaos_profile.schema.json  drift_report.schema.json  tool_transcript.schema.json  witness_manifest.schema.json
scripts/: check_gauntlet_root.sh  check_ordeal_root.sh  resolve_audit_check_sha.sh
spec/: COGITATOR_WITNESS_PROTOCOL.md
src/: agent.rs  canonical_json.rs  chaos.rs  drift.rs  eval.rs  gauntlet.rs  io_utils.rs  lib.rs  llm.rs  main.rs  model.rs  nix_provenance.rs  ordeal.rs  policy.rs  report.rs  tooling.rs  trace.rs  tui.rs  verify.rs  witness.rs
tasks/: gauntlet.json  ordeal.json
tests/: chaos_edge_cases.rs  determinism_props.rs  gauntlet.rs  ordeal.rs  policy_bail.rs  release_invariants.rs  verify_recompute.rs
