[package]
name = "cogitator"
version = "0.1.0"
edition = "2021"
description = "Deterministic parallel evaluation harness with optional TUI inspection cockpit"
license = "MIT"

[features]
tui = ["dep:ratatui", "dep:crossterm"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
csv = "1"
rand = "0.8"
sha2 = "0.10"
rayon = "1"

# Optional TUI stack
ratatui = { version = "0.28", optional = true }
crossterm = { version = "0.28", optional = true, features = ["event-stream"] }

